--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ $(document).ready(function(){
                 </ul>
             </div>
             <div class="header-btns">
-                <span class="contact"><a href="https://server1.xploreseo.com/contact.html">Contact Us</a></span>
-                <span class="buttontop"><a href="https://server1.xploreseo.com/build_your_day.html">Build your day</a></span>
+                <span class="contact"><a href=>Contact Us</a></span>
+                <span class="buttontop"><a href=>Build your day</a></span>
             </div>
            </div>
            <div class="mobile-navbar">
@@ -189,7 +189,7 @@ $(document).ready(function(){
                 <h3>
                     Break Free from the Ordinary Life
                 </h3>
-                <span><a href="https://server1.xploreseo.com/build_your_day.html">Join the fun</a></span>
+                <span><a href=>Join the fun</a></span>
                </div>
             </div>
         </div>
