--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ $(document).ready(function(){
            <div class="wrapper">
           <!-- Header Start -->
           <div class="header-items">
-           <a href="https://server1.xploreseo.com/">
+           <a href=>
                <img src="/assests/logo1-new.png" class="logoimg">
            </a>
             <div class="mobile-menu">
@@ -920,7 +920,7 @@ programs<sup></sup>
         // Load header and footer files on DOMContentLoaded
         document.addEventListener("DOMContentLoaded", function() {
             loadFile("header-placeholder", "https://server1.xploreseo.com/header.html");
-            loadFile("footer-placeholder", "https://server1.xploreseo.com/footer.html");
+            loadFile("footer-placeholder", "");
         });
     </script>
 
