--- a/index.html
+++ b/index.html
@@ -80,7 +80,65 @@
                     <img src="assets/image111.png" alt="Our Solutions">
                 </div>
             </div>
-            <!-- Additional solution containers go here -->
+            <div class="solution-container">
+                <div class="solution-details">
+                    <h3 class="solution-heading">Push Limits, Grow Stronger</h3>
+                    <p class="solutions">Our bold approach fosters true personal growth. GritLife offers NDIS-supported activities designed to challenge and inspire. Say goodbye to overly protective care and hello to thrilling, transformative experiences. Empower yourself to achieve new heights with our dynamic, limit-pushing adventures!</p>
+                </div>
+                <div class="solution-img">
+                    <img src="assets/thrive-img.png" alt="Push Limits">
+                </div>
+            </div>
+            <div class="solution-container">
+                <div class="solution-details">
+                    <h3 class="solution-heading">Perfect Match for Every Adventure</h3>
+                    <p class="solutions">No more settling for less. Our adventure partners are chosen to perfectly match your energy and passion. Experience the difference with companions who are ready to dive into every challenge with you, ensuring every session is as exhilarating as it is transformative. Push limits and grow stronger with a partner who truly gets you!</p>
+                </div>
+                <div class="solution-img">
+                    <img src="assets/three-newimg.png" alt="Perfect Match">
+                </div>
+            </div>
+            <div class="solution-container">
+                <div class="solution-details">
+                    <h3 class="solution-heading">Shape Every Moment: Your Day, Your Way</h3>
+                    <p class="solutions">With GritLife, you have the power to design each support session to fit your needs and passions. Our unique 'Build Your Day' feature lets you choose from a variety of main and supplementary activities, ensuring every moment is engaging and purposeful. No more wasted time or dead space, just seamless, dynamic experiences that keep you moving and growing. Enjoy complete autonomy and make the most of every day with GritLife.</p>
+                </div>
+                <div class="solution-img">
+                    <img src="assets/imagenew1.png" alt="Shape Every Moment">
+                </div>
+            </div>
+            <div class="solution-container">
+                <div class="solution-details">
+                    <h3 class="solution-heading">Conquer the Confusion: Your Simple NDIS Solution</h3>
+                    <p class="solutions">Navigating the complexities of NDIS support can be daunting, but GritLife simplifies everything. We offer clear documentation and reporting, seamless coordination of supports, and straightforward pricing and billing. Activities are easily categorised into paid and free options, accessible with a Companion Card, ensuring no unexpected costs. Our comprehensive approach removes confusion, making it easy for you to focus on your adventures while we handle the details. With GritLife, experience support that's transparent, organised, and stress-free.</p>
+                </div>
+                <div class="solution-img">
+                    <img src="assets/predectimage1.png" alt="NDIS Solution">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="testimonials-section">
+    <div class="wrapper">
+        <h2>Loved by Our Members</h2>
+        <div class="testimonial-slider">
+            <div class="testimonial-slide">
+                <img src="assets/img1.jpeg" alt="Testimonial 1">
+                <p>"This program has been a game-changer for me. Every adventure has brought joy and excitement back into my life. I feel truly understood and supported."</p>
+                <h3>Jake, Gritlife Member</h3>
+            </div>
+            <div class="testimonial-slide">
+                <img src="assets/kelly_13e7421b41.jpeg" alt="Testimonial 2">
+                <p>"Since joining GritLife, I've become more active than ever before. The thrilling activities have given me the motivation and confidence to take on physical challenges beyond our sessions."</p>
+                <h3>Jess, Gritlife Member</h3>
+            </div>
+            <div class="testimonial-slide">
+                <img src="assets/trent_277b0c8ca6.jpeg" alt="Testimonial 3">
+                <p>"I couldn't keep GritLife to myself! The adventures have been an absolute blast and deeply enriching. Everyone needs to experience this!"</p>
+                <h3>Ethan, Gritlife Member</h3>
+            </div>
         </div>
     </div>
 </section>
