--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ and the safety is top-notch.
                <!--     </p>-->
                <!-- </div>-->
                <!-- <div class="solution-img">-->
-               <!--     <img src="https://server1.xploreseo.com/gritlife/assests/Atlas.png" alt="solution">-->
+               <!--     <img src="assests/Atlas.png" alt="solution">-->
                <!-- </div>-->
                <!--</div>-->
             </div>
