--- a/index.html
+++ b/index.html
@@ -590,8 +590,8 @@ have been an absolute blast and deeply enriching. Everyone needs to experience t
                 
                            <!-- Navigation Buttons -->
                         <div class="testimonial-navigation">
-                            <button class="prev" onclick="moveSlide(-1)"><img src="/gritlife/assests/arrow.svg"></button>
-                            <button class="next" onclick="moveSlide(1)"> <img src="/gritlife/assests/arrow.svg"></button>
+                            <button class="prev" onclick="moveSlide(-1)"><img src="assests/arrow.svg"></button>
+                            <button class="next" onclick="moveSlide(1)"> <img src="assests/arrow.svg"></button>
                         </div>
                     </div>
 	               
