--- a/about.html
+++ b/about.html
@@ -353,7 +353,7 @@ section.Manifesto-section {
                 </ul>
             </div>
             <div class="header-btns">
-                <span class="contact"><a href="https://server1.xploreseo.comcontact.html">Contact Us</a></span>
+                <span class="contact"><a href="contact.html">Contact Us</a></span>
                 <span class="buttontop"><a href="build_your_day.html">Build your day</a></span>
             </div>
            </div>
