--- a/footer.html
+++ b/footer.html
@@ -9,8 +9,8 @@
 				</div>
 			
 			     <div class="inner_cont_sec  iner-sec34">
-				    <a href="/gritlife/contact.html" class="man_footer-button1">Contact us</a>
-				    <a href="https://server1.xploreseo.com/gritlife/build_your_day.html" class="man_footer-button">Start Today</a>
+				    <a href="contact.html" class="man_footer-button1">Contact us</a>
+				    <a href="build_your_day.html" class="man_footer-button">Start Today</a>
 				 </div>
 			
 			</div>
@@ -37,7 +37,7 @@
 	      
 	       <div class="man-flex-cont">
 		      <div class="man-logo-cont">
-			    <a href="https://server1.xploreseo.com/gritlife/" class="manfooter-img"><img src="/gritlife/assests/logo1-new.png" class="logoimg"></a>
+			    <a href="https://server1.xploreseo.com/gritlife/" class="manfooter-img"><img src="assests/logo1-new.png" class="logoimg"></a>
 			  <div class="man-socials-icon">
 			    <a class="manicon-cont" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" aria-label="Twitter logo" 
 				viewBox="0 0 20 20"><path fill="currentColor" d="M14.6 2.84h2.454l-5.36 6.072L18 17.173h-4.937l-3.867-5.01-4.425 5.01H2.316l5.733-6.494L2 
@@ -55,9 +55,9 @@
 				  <h3 class="manfooter-head">Business</h3>
 					<ul class="man-list-cont">
 					   <li class="manlist-iteam"> <a href="/gritlife">Home</a></li>
-						 <li class="manlist-iteam"><a href="/gritlife/about.html">About Us</a></li>
-						  <li class="manlist-iteam"> <a href="/gritlife/carers.html">Our Carers</a></li>
-						  <li class="manlist-iteam"><a href="/gritlife/experiences.html">Experiences</a></li>
+						 <li class="manlist-iteam"><a href="about.html">About Us</a></li>
+						  <li class="manlist-iteam"> <a href="carers.html">Our Carers</a></li>
+						  <li class="manlist-iteam"><a href="experiences.html">Experiences</a></li>
 					</ul>
 			  </div>
 			  
@@ -67,8 +67,8 @@
 					     <li class="manlist-iteam"><a target="_black" href="https://form.jotform.com/241568039070052">New Client sign up </a></li>
 						<li class="manlist-iteam"><a target="_black" href="https://form.jotform.com/241666882173061">Carer sign up </a></li>
 					    <li class="manlist-iteam"><a target="_black" href="https://form.jotform.com/241687758776075">Adventure request</a></li>
-					   <li class="manlist-iteam"><a href="/gritlife/faq.html">FAQ</a></li>
-						<li class="manlist-iteam"><a href="/gritlife/contact.html">Contact</a></li>
+					   <li class="manlist-iteam"><a href="faq.html">FAQ</a></li>
+						<li class="manlist-iteam"><a href="contact.html">Contact</a></li>
 					</ul>
 			  </div>
 			   <div class="man-list-main">
@@ -125,8 +125,8 @@
 	<div class="manbottom-footer">
 	    <div class="container">
 		   <div class="wrapper">
-		     <ul class="bottom-cont-footer"><li><a href="/gritlife/terms-of-conditions.html">Terms and Conditions</a></li>
-			 <li><a href="/gritlife/privacy-policy.html"> Privacy Policy</a></li>
+		     <ul class="bottom-cont-footer"><li><a href="terms-of-conditions.html">Terms and Conditions</a></li>
+			 <li><a href="privacy-policy.html"> Privacy Policy</a></li>
 			 <!--<li><a href="#">HIPAA Notice of Privacy Practices</a></li>-->
 			 <!--<li><a href="#">Privacy Statement</a></li>-->
 			 <!--<li><a href="#">Non-Discrimination</a></li>-->
