--- a/terms-of-conditions.html
+++ b/terms-of-conditions.html
@@ -197,7 +197,7 @@ section.manterms-mainsection .wrapper {
 .banner {
             width: 100%;
             height: 500px;
-            background-image: url('/gritlife/assests/desktop_background.jpeg'); 
+            background-image: url('assests/desktop_background.jpeg'); 
             background-size: cover;
             background-position: center;
             display: flex;
@@ -229,7 +229,7 @@ section.manterms-mainsection .wrapper {
           <!-- Header Start -->
           <div class="header-items">
            <a href="https://server1.xploreseo.com/gritlife/">
-               <img src="/gritlife/assests/logo1-new.png" class="logoimg">
+               <img src="assests/logo1-new.png" class="logoimg">
            </a>
             <div class="mobile-menu">
                 <i class="bi bi-list"></i>
@@ -238,26 +238,26 @@ section.manterms-mainsection .wrapper {
                 <ul class="nav-items">
                     <li class="link"><a href="/gritlife/"> Home </a>
                     </li>
-                    <li class="link"><a href="/gritlife/about.html"> About Us</a></li>
-                    <li class="link"><a href="/gritlife/carers.html"> Our Careers </a></li>
-                    <li class="link"><a href="/gritlife/experiences.html"> Experiences </a></li>
-                    <li class="link"><a href="/gritlife/terms-of-conditions.html"> Terms and Conditions </a></li>
-                    <li class="link"><a href="/gritlife/privacy-policy.html"> Privacy Policy </a></li>
+                    <li class="link"><a href="about.html"> About Us</a></li>
+                    <li class="link"><a href="carers.html"> Our Careers </a></li>
+                    <li class="link"><a href="experiences.html"> Experiences </a></li>
+                    <li class="link"><a href="terms-of-conditions.html"> Terms and Conditions </a></li>
+                    <li class="link"><a href="privacy-policy.html"> Privacy Policy </a></li>
                     <!--<li class="link"><a href="#">Company &nbsp;<i class="bi bi-chevron-down"></i></a></li>-->
                 </ul>
             </div>
             <div class="header-btns">
-                <span class="contact"><a href="https://server1.xploreseo.com/gritlife/contact.html">Contact Us</a></span>
-                <span class="buttontop"><a href="https://server1.xploreseo.com/gritlife/build_your_day.html">Build your day</a></span>
+                <span class="contact"><a href="contact.html">Contact Us</a></span>
+                <span class="buttontop"><a href="build_your_day.html">Build your day</a></span>
             </div>
            </div>
            <div class="mobile-navbar">
                 <ul class="list-item">
                     <li class="link"><a href="/gritlife/">Home </a>
                     </li>
-                    <li class="link"><a href="/gritlife/about.html">About Us</a></li>
-                    <li class="link"><a href="/gritlife/carers.html">Our Carers </a></li>
-                    <li class="link"><a href="/gritlife/experiences.html">Experiences </a></li>
+                    <li class="link"><a href="about.html">About Us</a></li>
+                    <li class="link"><a href="carers.html">Our Carers </a></li>
+                    <li class="link"><a href="experiences.html">Experiences </a></li>
                 </ul>
             </div>
            <!-- Header End -->
@@ -398,8 +398,8 @@ section.manterms-mainsection .wrapper {
 
         // Load header and footer files on DOMContentLoaded
         document.addEventListener("DOMContentLoaded", function() {
-            loadFile("header-placeholder", "https://server1.xploreseo.com/gritlife/header.html");
-            loadFile("footer-placeholder", "https://server1.xploreseo.com/gritlife/footer.html");
+            loadFile("header-placeholder", "header.html");
+            loadFile("footer-placeholder", "footer.html");
         });
     </script>
 </div>
