--- a/build_your_day.html
+++ b/build_your_day.html
@@ -186,7 +186,7 @@ a.existing-client-button:hover {
            <div class="wrapper">
           <!-- Header Start -->
           <div class="header-items">
-           <a href="https://server1.xploreseo.com/gritlife/">
+           <a href="index.html">
                <img src="assests/logo1-new.png" class="logoimg">
            </a>
             <div class="mobile-menu">
@@ -194,7 +194,7 @@ a.existing-client-button:hover {
             </div>
             <div class="navbar">
                 <ul class="nav-items">
-                    <li class="link"><a href="/gritlife/"> Home </a>
+                    <li class="link"><a href="index.html"> Home </a>
                     </li>
                     <li class="link"><a href="about.html"> About Us</a></li>
                     <li class="link"><a href="carers.html"> Our Careers </a></li>
@@ -211,7 +211,7 @@ a.existing-client-button:hover {
            </div>
            <div class="mobile-navbar">
                 <ul class="list-item">
-                    <li class="link"><a href="/gritlife/">Home </a>
+                    <li class="link"><a href="index.html">Home </a>
                     </li>
                     <li class="link"><a href="about.html">About Us</a></li>
                     <li class="link"><a href="carers.html">Our Carers </a></li>
