--- a/faq.html
+++ b/faq.html
@@ -340,7 +340,7 @@ section.faq-section-second {
            <div class="wrapper">
           <!-- Header Start -->
           <div class="header-items">
-           <a href="https://server1.xploreseo.com/gritlife/">
+           <a href="index.html">
                <img src="assests/logo1-new.png" class="logoimg">
            </a>
             <div class="mobile-menu">
@@ -348,7 +348,7 @@ section.faq-section-second {
             </div>
             <div class="navbar">
                 <ul class="nav-items">
-                    <li class="link"><a href="/gritlife/"> Home </a>
+                    <li class="link"><a href="index.html"> Home </a>
                     </li>
                     <li class="link"><a href="about.html"> About Us</a></li>
                     <li class="link"><a href="carers.html"> Our Careers </a></li>
@@ -365,7 +365,7 @@ section.faq-section-second {
            </div>
            <div class="mobile-navbar">
                 <ul class="list-item">
-                    <li class="link"><a href="/gritlife/">Home </a>
+                    <li class="link"><a href="index.html">Home </a>
                     </li>
                     <li class="link"><a href="about.html">About Us</a></li>
                     <li class="link"><a href="carers.html">Our Carers </a></li>
