--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@
 	      
 	       <div class="man-flex-cont">
 		      <div class="man-logo-cont">
-			    <a href="https://server1.xploreseo.com/gritlife/" class="manfooter-img"><img src="assests/logo1-new.png" class="logoimg"></a>
+			    <a href="index.html" class="manfooter-img"><img src="assests/logo1-new.png" class="logoimg"></a>
 			  <div class="man-socials-icon">
 			    <a class="manicon-cont" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" aria-label="Twitter logo" 
 				viewBox="0 0 20 20"><path fill="currentColor" d="M14.6 2.84h2.454l-5.36 6.072L18 17.173h-4.937l-3.867-5.01-4.425 5.01H2.316l5.733-6.494L2 
