--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -219,7 +219,7 @@ ul.privcy-list-style li a {
            <div class="wrapper">
           <!-- Header Start -->
           <div class="header-items">
-           <a href="https://server1.xploreseo.com/gritlife/">
+           <a href="index.html">
                <img src="assests/logo1-new.png" class="logoimg">
            </a>
             <div class="mobile-menu">
@@ -227,7 +227,7 @@ ul.privcy-list-style li a {
             </div>
             <div class="navbar">
                 <ul class="nav-items">
-                    <li class="link"><a href="/gritlife/"> Home </a>
+                    <li class="link"><a href="index.html"> Home </a>
                     </li>
                     <li class="link"><a href="about.html"> About Us</a></li>
                     <li class="link"><a href="carers.html"> Our Careers </a></li>
@@ -244,7 +244,7 @@ ul.privcy-list-style li a {
            </div>
            <div class="mobile-navbar">
                 <ul class="list-item">
-                    <li class="link"><a href="/gritlife/">Home </a>
+                    <li class="link"><a href="index.html">Home </a>
                     </li>
                     <li class="link"><a href="about.html">About Us</a></li>
                     <li class="link"><a href="carers.html">Our Carers </a></li>
