--- a/terms-of-conditions.html
+++ b/terms-of-conditions.html
@@ -228,7 +228,7 @@ section.manterms-mainsection .wrapper {
            <div class="wrapper">
           <!-- Header Start -->
           <div class="header-items">
-           <a href="https://server1.xploreseo.com/gritlife/">
+           <a href="index.html">
                <img src="assests/logo1-new.png" class="logoimg">
            </a>
             <div class="mobile-menu">
@@ -236,7 +236,7 @@ section.manterms-mainsection .wrapper {
             </div>
             <div class="navbar">
                 <ul class="nav-items">
-                    <li class="link"><a href="/gritlife/"> Home </a>
+                    <li class="link"><a href="index.html"> Home </a>
                     </li>
                     <li class="link"><a href="about.html"> About Us</a></li>
                     <li class="link"><a href="carers.html"> Our Careers </a></li>
@@ -253,7 +253,7 @@ section.manterms-mainsection .wrapper {
            </div>
            <div class="mobile-navbar">
                 <ul class="list-item">
-                    <li class="link"><a href="/gritlife/">Home </a>
+                    <li class="link"><a href="index.html">Home </a>
                     </li>
                     <li class="link"><a href="about.html">About Us</a></li>
                     <li class="link"><a href="carers.html">Our Carers </a></li>
