--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@ logistics and important details. This includes your custom itinerary, activity t
                     <div class="side-cards">
                        <div class="side-card">  
                         <div class="side-detail">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="22" fill="#5993EA" stroke="#5993EA" viewBox="0 0 19 22"><path fill-rule="evenodd" d="M9.5 1c.321 0 .588.236.643.547l.01.12v17.056l6.73-6.861c.256-.26.67-.26.925 0 .227.231.253.59.076.85l-.076.093-7.846 8-.054.05-.081.056-.123.056-.088.023L9.5 21l-.07-.004-.096-.018-.106-.038-.1-.059-.09-.076-7.846-8a.676.676 0 0 1 0-.943.645.645 0 0 1 .834-.077l.09.077 6.73 6.862V1.667A.66.66 0 0 1 9.5 1Z" clip-rule="evenodd"></path></svg>&nbsp;<strong>Founded by Passion</strong>
+                           &nbsp;<strong>Founded by Passion</strong>
                         <p>
                             Launched in 2024 by a group of like-minded thrill-seekers who saw
 a need for more engaging, empowering activities for individuals within the NDIS framework
