--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ logistics and important details. This includes your custom itinerary, activity t
                            
                         </div>
                         <div class="quote-container">  
-                
+				<svg xmlns="http://www.w3.org/2000/svg" width="27" height="20" fill="#5993EA" viewBox="0 0 27 20"><path d="M21.535 20q-2.855 0-4.731-1.84-1.795-1.84-1.795-5.28 0-3.68 2.12-7.28Q19.334 2 23.249 0l1.876 2.8q-4.242 2.88-5.057 7.28.734-.32 1.712-.32 2.285 0 3.753 1.44T27 14.88q0 2.24-1.55 3.68T21.535 20m-15.01 0q-2.855 0-4.73-1.84Q0 16.32 0 12.88 0 9.2 2.12 5.6 4.325 2 8.24 0l1.876 2.8q-4.242 2.88-5.058 7.28.734-.32 1.713-.32 2.285 0 3.753 1.44t1.468 3.68-1.55 3.68T6.526 20"></path></svg>
                             <div class="quote">
                                 Support becomes a springboard to adventure —an electrifying path to self-discovery. We push limits, spark excitement, and create a space where you can truly test your potential with confidence.
                             </div>
