--- a/index.html
+++ b/index.html
@@ -812,8 +812,8 @@ programs<sup></sup>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentcolor" viewBox="0 0 20 20" aria-hidden="true" class="_quoteIcon_d6277ee">
                                 <path d="M16.672 4.977a.513.513 0 0 0 .041-.849.5.5 0 0 0-.455-.078c-.388.12-1.808.608-3.14 1.678C11.779 6.805 10.5 8.498 10.5 11c0 2.207 1.503 4 3.5 4h.5a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061m-8.5-.05a.513.513 0 0 0 
                                 .041-.849A.5.5 0 0 0 7.758 4c-.388.12-1.808.608-3.14 1.678C3.279 6.755 2 8.448 2 10.95c0 2.207 1.503 4 3.5 4H6a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061"></path></svg>
-                                <p>You have the power to get out of [pain]. It's a very isolating feeling, and this journey has let me be so much more present. I'm excited I get to do this with my kids.</p>
-                                <h3 class="manauther-name-new">Kelly</h3>
+                                <p>GritLife lets me do what I love—helping young adults conquer their fears while I shape my own career.</p>
+                                <h3 class="manauther-name-new">Emma, Adventure Guide</h3>
                             </div>
                             </div>
                         </div>
@@ -824,8 +824,8 @@ programs<sup></sup>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentcolor" viewBox="0 0 20 20" aria-hidden="true" class="_quoteIcon_d6277ee">
                                 <path d="M16.672 4.977a.513.513 0 0 0 .041-.849.5.5 0 0 0-.455-.078c-.388.12-1.808.608-3.14 1.678C11.779 6.805 10.5 8.498 10.5 11c0 2.207 1.503 4 3.5 4h.5a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061m-8.5-.05a.513.513 0 0 0 
                                 .041-.849A.5.5 0 0 0 7.758 4c-.388.12-1.808.608-3.14 1.678C3.279 6.755 2 8.448 2 10.95c0 2.207 1.503 4 3.5 4H6a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061"></path></svg>
-                                <p>I really do think that movement is medicine. Sword was instrumental for my knee pain. Had it not been for that, I might not have made it.</p>
-                                <h3 class="manauther-name-new">Trent</h3>
+                                <p>GritLife made Alex more social and confident. He's thriving in ways I hadn’t seen before.</p>
+                                <h3 class="manauther-name-new">Mark, Father of Alex, 17</h3>
                             </div>
                             </div>
                         </div>
@@ -836,8 +836,8 @@ programs<sup></sup>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentcolor" viewBox="0 0 20 20" aria-hidden="true" class="_quoteIcon_d6277ee">
                                 <path d="M16.672 4.977a.513.513 0 0 0 .041-.849.5.5 0 0 0-.455-.078c-.388.12-1.808.608-3.14 1.678C11.779 6.805 10.5 8.498 10.5 11c0 2.207 1.503 4 3.5 4h.5a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061m-8.5-.05a.513.513 0 0 0 
                                 .041-.849A.5.5 0 0 0 7.758 4c-.388.12-1.808.608-3.14 1.678C3.279 6.755 2 8.448 2 10.95c0 2.207 1.503 4 3.5 4H6a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061"></path></svg>
-                                <p>[Sword] helped me stay away from obesity...and it helped me find my path as a father so my kids have a good role model. Being able to move is a blessing.</p>
-                                <h3 class="manauther-name-new">Marcelo</h3>
+                                <p>I craved intensity, and they delivered. It’s all about finding out what I’m made of.</p>
+                                <h3 class="manauther-name-new">Jake, 22</h3>
                             </div>
                             </div>
                         </div>
@@ -848,8 +848,8 @@ programs<sup></sup>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentcolor" viewBox="0 0 20 20" aria-hidden="true" class="_quoteIcon_d6277ee">
                                 <path d="M16.672 4.977a.513.513 0 0 0 .041-.849.5.5 0 0 0-.455-.078c-.388.12-1.808.608-3.14 1.678C11.779 6.805 10.5 8.498 10.5 11c0 2.207 1.503 4 3.5 4h.5a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061m-8.5-.05a.513.513 0 0 0 
                                 .041-.849A.5.5 0 0 0 7.758 4c-.388.12-1.808.608-3.14 1.678C3.279 6.755 2 8.448 2 10.95c0 2.207 1.503 4 3.5 4H6a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061"></path></svg>
-                                <p>This product has freed me from so much pain and has literally given me my freedom of movement back.</p>
-                                <h3 class="manauther-name-new">Cynthia K</h3>
+                                <p>GritLife got me off the couch and into adventure. Now, I'm pushing my limits every day.</p>
+                                <h3 class="manauther-name-new">Tom, 18 </h3>
                             </div>
                             </div>
                         </div>
