--- a/index.html
+++ b/index.html
@@ -567,7 +567,22 @@ have been an absolute blast and deeply enriching. Everyone needs to experience t
                                     </div>
                                 </div>
                             </div>
-                            
+                                   <div class="testimonial-slide">
+                                <div class="main-testmonils-cont">
+                                     <img src="assests/img1.jpeg" alt="solution-img">
+                                    
+                                    <div class="testimonilscontent-inner">
+                                        <button class="playvideo-btn">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewBox="0 0 48 48"><circle cx="24" cy="24" r="23" stroke="#fff" stroke-width="2"></circle><path fill="#fff" d="m21.31 16.13 10.2 7.024a1 1 0 0 1 0 1.647l-10.2 7.024a1 1 0 0 1-1.568-.823V16.954a1 1 0 0 1 1.567-.824"></path></svg>
+                                        </button>
+                                    <div class="testimonial-content">
+                                      <p> “10 weeks into the program my back pain completely dissolved. It’s like complete freedom from something that’s been terrorizing you 24 hours a day.”</p>
+                                    </div>
+                                    <div class="testimonial-author">
+                                        Marcelo
+                                    </div>
+                                    <h3 class="mandic-testmonila">Sword member</h3>
+                                    </div>
                                 </div>
                             </div>
                         </div>
