--- a/footer.html
+++ b/footer.html
@@ -39,11 +39,10 @@
 		      <div class="man-logo-cont">
 			    <a href="index.html" class="manfooter-img"><img src="assests/logo1-new.png" class="logoimg"></a>
 			  <div class="man-socials-icon">
-			    <a class="manicon-cont" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" aria-label="Twitter logo" 
-				viewBox="0 0 20 20"><path fill="currentColor" d="M14.6 2.84h2.454l-5.36 6.072L18 17.173h-4.937l-3.867-5.01-4.425 5.01H2.316l5.733-6.494L2 
-				2.84h5.062l3.496 4.58zm-.86 12.878h1.36L6.323 4.219H4.865z"></path></svg></a>
+			    <a class="manicon-cont" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" aria-label="Instagram logo" 
+				viewBox="0 0 20 20"><path fill="currentColor" d="M8.999 2.666c2.423 0 2.708.009 3.677.053.967.043 1.633.195 2.013.332.47.174.804.382 1.155.733.35.35.558.685.733 1.155.137.38.289 1.046.332 2.013.044.969.053 1.254.053 3.677s-.009 2.708-.053 3.677c-.043.967-.195 1.633-.332 2.013a2.869 2.869 0 0 1-.733 1.155c-.35.35-.685.558-1.155.733-.38.137-1.046.289-2.013.332-.969.044-1.254.053-3.677.053s-2.708-.009-3.677-.053c-.967-.043-1.633-.195-2.013-.332a2.869 2.869 0 0 1-1.155-.733 2.869 2.869 0 0 1-.733-1.155c-.137-.38-.289-1.046-.332-2.013-.044-.969-.053-1.254-.053-3.677s.009-2.708.053-3.677c.043-.967.195-1.633.332-2.013a2.869 2.869 0 0 1 .733-1.155c.35-.35.685-.558 1.155-.733.38-.137 1.046-.289 2.013-.332.969-.044 1.254-.053 3.677-.053zm0-1.999C6.577.667 6.27.676 5.287.72 4.291.764 3.452.939 2.717 1.264a4.863 4.863 0 0 0-1.758 1.161A4.863 4.863 0 0 0 .26 4.184c-.325.735-.5 1.574-.544 2.57-.044.984-.053 1.291-.053 4.423s.009 3.438.053 4.423c.044.996.219 1.835.544 2.57.375.743.88 1.248 1.507 1.758a4.863 4.863 0 0 0 1.758 1.161c.735.325 1.574.5 2.57.544.984.044 1.291.053 4.423.053s3.438-.009 4.423-.053c.996-.044 1.835-.219 2.57-.544a4.863 4.863 0 0 0 1.758-1.161 4.863 4.863 0 0 0 1.161-1.758c.325-.735.5-1.574.544-2.57.044-.984.053-1.291.053-4.423s-.009-3.438-.053-4.423c-.044-.996-.219-1.835-.544-2.57a4.863 4.863 0 0 0-1.161-1.758 4.863 4.863 0 0 0-1.758-1.161c-.735-.325-1.574-.5-2.57-.544-.984-.044-1.291-.053-4.423-.053zm0 3.668a5.334 5.334 0 1 0 0 10.668 5.334 5.334 0 0 0 0-10.668zm0 8.668a3.334 3.334 0 1 1 0-6.668 3.334 3.334 0 0 1 0 6.668zm6.333-8.073a1.333 1.333 0 1 1-2.666 0 1.333 1.333 0 0 1 2.666 0z"></path></svg></a>
 				<a href="#" class="manicon-cont">
-				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" aria-label="LinkedIn logo" viewBox="0 0 20 20"><path fill="currentColor" d="M5.596 17.99H2.24V7.33h3.356zM3.916 5.854a1.927 1.927 0 1 1 1.938-1.925 1.9 1.9 0 0 1-1.938 1.925M17.966 18H14.61v-5.824c0-1.717-.73-2.247-1.672-2.247-.995 0-1.972.75-1.972 2.29V18H7.611V7.338h3.228v1.478h.043c.324-.656 1.459-1.777 3.19-1.777 1.873 0 3.896 1.112 3.896 4.367z"></path></svg>
+				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" aria-label="Facebook logo" viewBox="0 0 20 20"><path fill="currentColor" d="M9 0C4.029 0 0 4.029 0 9c0 4.509 3.292 8.231 7.594 8.895v-6.285H5.324V9h2.27V7.034c0-2.248 1.342-3.487 3.394-3.487.968 0 1.996.173 1.996.173v2.187h-1.125c-1.109 0-1.448.693-1.448 1.406V9h2.516l-.402 2.61h-2.114v6.285C14.708 17.231 18 13.509 18 9c0-4.971-4.029-9-9-9z"></path></svg>
 				</a>
 				<p class="mancopyright-cont">© 2024 Gritlife.<br>
                  All Rights Reserved</p>
@@ -74,7 +73,7 @@
 			   <div class="man-list-main">
 				  <h3 class="manfooter-head">Contact Information</h3>
 					<ul class="man-list-cont">
-					   <li class="manlist-iteam">93 Beatrice street Taringa</li>
+					   <li class="manlist-iteam">Brisbane, Queensland</li>
 						<li class="manlist-iteam"><a href="mailto:louis@gritlife.com.au">louis@gritlife.com.au</a></li>
 						<li class="manlist-iteam"><a href="tel:0400111299">0400111299</a></li>
 						<!--<li class="manlist-iteam">FAQs</li>-->
