--- a/about.html
+++ b/about.html
@@ -396,9 +396,7 @@ section.Manifesto-section {
             </div>
         
         <div class="second-inner-flex">
-                                <h2>"Auvonture for t just thing
-                    it's a path to growth and
-                    empowerment."</h2>
+                                <h2>"Adventure is more than just thrill-seeking; it's a pathway to personal growth and empowerment."</h2>
                     <p>I founded GritLife with a personal mission to transform the NDIS sector. With over five years of experience in the NDIS landscape, I've seen firsthand the challenges and opportunities within the system. My deep understanding comes not only from my professional background, working both for agencies and as an independent support worker, but also from a personal connection, having family members who rely on NDIS services.<br><br>
                     Determined to cut through the confusion and stigma often associated with NDIS support, I envisioned an agency that stood apart. GritLife was created to offer something truly unique a niche service that not only meets the adventurous spirit of our clients but also addresses their individual needs with clarity and compassion.<br><br>
                     This is our life's work: to change the status quo and empower individuals through adventurous, clear, and personalised support. If you share our passion for transformation and empowerment, join us. We're just getting started.<br><br>
