--- a/carers.html
+++ b/carers.html
@@ -986,11 +986,11 @@ ul.maninner-iteamon-scroll::-webkit-scrollbar-thumb {
                </div>
                <ul class="maninner-iteamon-scroll">
                    <li class="list-item-neww"><p>you have a genuine love for the outdoors and a passion for exploring new challenges.</p></li>
-                    <li class="list-item-neww"><p>believe that changing the world isn't confined to 9-to-5?</p></li>
-                     <li class="list-item-neww"><p>approach your work with a sense of ownership?</p></li>
-                      <li class="list-item-neww"><p>get energized by big challenges?</p></li>
-                       <li class="list-item-neww"><p>find creative ways to deliver excellent work in half the time?</p></li>
-                        <li class="list-item-neww"><p>persist through the toughest obstacles because failure is not an option?</p></li>
+                    <li class="list-item-neww"><p>You can adapt to changing environments and overcome challenges with a positive attitude.</p></li>
+                     <li class="list-item-neww"><p>Understanding and relating to the needs of our clients is at the core of what you do.</p></li>
+                      <li class="list-item-neww"><p>You are a natural leader who can guide and motivate others.</p></li>
+                       <li class="list-item-neww"><p>You bring creative solutions to the table and are not afraid to think outside the box.</p></li>
+                        
                         
                         <li style="opacity:0 !important;" class="list-item-neww"><p>persist through the toughest obstacles because failure is not an option?</p></li>
                </ul>
